--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@ Let’s connect and collaborate on cutting-edge IT solutions! 🚀</p>
 						<div class="col-lg-12">
 							<div class="section-heading wow fadeInUp" data-wow-delay="0.2s">
 								<h2 class="title">
-									<span class="color">Gallery</span></h2>
+									<span class="color">Blogs</span></h2>
 							</div>
 						</div>
 					</div>
