--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/pro2.jpeg" alt="">
+											<img src="public/uplodes/pro2.jpeg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
@@ -564,7 +564,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/proj3.jpg" alt="">
+											<img src="public/uplodes/proj3.jpg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
@@ -582,7 +582,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/pro3.jpeg" alt="">
+											<img src="public/uplodes/pro3.jpeg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
