--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/img7.jpeg" alt="">
+											<img src="public/front/assets/images/cerification/img7.jpg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
@@ -755,7 +755,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/img8.jpeg" alt="">
+											<img src="public/front/assets/images/cerification/img8.jpg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
@@ -774,7 +774,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/img9.jpeg" alt="">
+											<img src="public/front/assets/images/cerification/img9.jpg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
@@ -793,7 +793,7 @@
 								<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
 									<div class="gallery-item-content wow fadeInUp">
 										<div class="item-thumbnail">
-											<img src="public/front/assets/images/cerification/img10.jpeg" alt="">
+											<img src="public/front/assets/images/cerification/img10.jpg" alt="">
 											<div class="content-overlay">
 												<div class="content">
 													<div class="links">
