--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keyword" content="resume,cv,portfolio,vcard">
-	<meta name="keyword" content="ICT Specialist & Consultant with more then 20 years of Technical experience in Microsoft, CISCO, Fortinet, VM Ware, CompTIA, Security, Firewall, AWS ">
 	<title>Niloy Saha</title>
 	<!-- favicon -->
 	<link rel="shortcut icon" href="public/front/assets/images/favicon.png" type="image/x-icon">
@@ -610,7 +609,7 @@
 						<div class="col-lg-12">
 							<div class="section-heading wow fadeInUp" data-wow-delay="0.2s">
 								<h2 class="title">
-									<span class="color">Certification</span>
+									Cer<span class="color">tifications</span>
 									
 								</h2>
 							</div>
